--- a/irbookslide.sty
+++ b/irbookslide.sty
@@ -43,7 +43,8 @@
 \def\myred#1{\textcolor{texred}{#1}}
 \definecolor{texgreen}{rgb}{0, 1, 0} 
 \definecolor{texgreen}{rgb}{0.2,0.6,0.2}
-\def\mygreen#1{\textcolor{texgreen}{#1}}
+\definecolor{deepgreen}{rgb}{0.0,0.376,0.0}
+\def\mygreen#1{\textcolor{deepgreen}{#1}}
 
 % have this if you'd like a recurring outline
 % \AtBeginSection[]  % ``Beamer, do the following at the start
