--- a/irilmenau2.sty
+++ b/irilmenau2.sty
@@ -5,3 +5,7 @@
 \useinnertheme{rounded}
 \setbeamercovered{invisible}
 \setbeamertemplate{navigation symbols}{}
+\definecolor{beamer@maroon}{rgb}{0.639,0.0,0.0}
+\definecolor{beamer@deepgreen}{rgb}{0.0,0.376,0.0}
+\setbeamercolor*{palette primary}{use=beaver,fg=white,bg=beamer@deepgreen}
+\setbeamercolor*{item}{fg=beamer@deepgreen}
